fix: add more flex-wraps to collection browse page and collection edit page

--- a/src/pages/browse/collections/index.module.css
+++ b/src/pages/browse/collections/index.module.css
@@ -14,4 +14,5 @@
   display: flex;
   align-items: center;
   gap: 2rem;
+  flex-wrap: wrap;
 }
