--- a/src/pages/collections/[id]/edit/index.module.css
+++ b/src/pages/collections/[id]/edit/index.module.css
@@ -54,4 +54,5 @@
   justify-content: space-between;
   align-items: center;
   gap: 1rem;
+  flex-wrap: wrap;
 }
